Fix dark mode sleep default circles

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -378,7 +378,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: #CDCFD1;
   /* Semi-transparent gray for a modern look */
   border-radius: 10px;
   /* More rounded corners */
@@ -388,17 +388,6 @@
   /* Smooth transition for hover effect */
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(128, 128, 128, 0.8);
-  /* Darker on hover */
-}
-
-::-webkit-scrollbar-track {
-  background-color: transparent;
-  /* Keeps track transparent */
-  border-radius: 10px;
-  /* Matching radius */
-}
 
 /* Dark Mode Scrollbar */
 @media (prefers-color-scheme: dark) {
@@ -417,9 +406,7 @@
 /* For Firefox support */
 html {
   scrollbar-width: thin;
-  /* "thin" or "auto" */
-  scrollbar-color: #949597 transparent;
-  /* thumb and track color */
+  scrollbar-color: #dad8d5 transparent;
 }
 
 @media (prefers-color-scheme: dark) {
